--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ select.select {
 .flex--flex-grow-all > * {
 	-webkit-box-flex: 1;
 	-moz-box-flex: 1;
-	-webkit-flex-grow: 1;
-	-ms-flex-grow: 1;
-	flex-grow: 1
+	-webkit-flex: 1;
+	-ms-flex: 1;
+	flex: 1
 }
